<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.zrlog</groupId>
    <artifactId>plugin-site-check</artifactId>
    <version>4.0.0</version>

    <properties>
        <outputDirectory>${project.build.directory}</outputDirectory>
        <imageName>site-check</imageName>
        <native.maven.plugin.version>0.10.2</native.maven.plugin.version>
        <native.image.mainClass>com.zrlog.plugin.sitecheck.Application</native.image.mainClass>
        <native.image.agentMainClass>com.zrlog.plugin.sitecheck.GraalvmAgentApplication</native.image.agentMainClass>
        <frontendBuildOutputPath>../resources/templates</frontendBuildOutputPath>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.hibegin</groupId>
            <artifactId>zrlog-plugin-common</artifactId>
            <version>4.0.5-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.hibegin</groupId>
            <artifactId>common-dao</artifactId>
            <version>1.1.10-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.15.3</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>central-snapshots</id>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>central-center</id>
            <url>https://repo1.maven.org/maven2/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
    </repositories>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/**</include>
                </includes>
            </resource>
            <resource>
                <directory>target/generated-resources/plugin-info</directory>
                <includes>
                    <include>plugin.properties</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <overwrite>true</overwrite>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>java-agent</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>java</executable>
                            <workingDirectory>${project.build.directory}</workingDirectory>
                            <arguments>
                                <argument>--enable-preview</argument>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>${native.image.agentMainClass}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>native</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${project.build.directory}/${imageName}</executable>
                            <workingDirectory>${project.build.directory}</workingDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.zrlog.plugin.sitecheck.Application</mainClass>
                        </manifest>
                    </archive>
                    <finalName>site-check</finalName>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <appendAssemblyId>false</appendAssemblyId>
                    <outputDirectory>${outputDirectory}</outputDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jar-plugin</artifactId>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native.maven.plugin.version}</version>
                        <extensions>true</extensions>
                        <executions>
                            <execution>
                                <id>build-native</id>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                            <execution>
                                <id>test-native</id>
                                <goals>
                                    <goal>test</goal>
                                </goals>
                                <phase>test</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <fallback>false</fallback>
                            <buildArgs>
                                <arg>
                                    -Os
                                    --enable-sbom
                                    -H:+BuildReport
                                    -H:+UnlockExperimentalVMOptions
                                    --allow-incomplete-classpath
                                    -march=compatibility
                                    --enable-preview
                                    -H:DashboardDump=${imageName}
                                    -H:+DashboardAll
                                    -H:IncludeResources=
                                    --enable-monitoring=heapdump
                                </arg>
                            </buildArgs>
                            <mainClass>${native.image.mainClass}</mainClass>
                            <agent>
                                <enabled>true</enabled>
                            </agent>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>nodeBuild</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.github.eirslett</groupId>
                        <artifactId>frontend-maven-plugin</artifactId>
                        <version>1.15.0</version>
                        <executions>
                            <execution>
                                <id>install node and yarn</id>
                                <goals>
                                    <goal>install-node-and-yarn</goal>
                                </goals>
                                <phase>generate-resources</phase>
                            </execution>
                            <execution>
                                <id>yarn install</id>
                                <goals>
                                    <goal>yarn</goal>
                                </goals>
                                <configuration>
                                    <arguments>install --registry=https://registry.npmmirror.com --frozen-lockfile</arguments>
                                </configuration>
                                <phase>generate-resources</phase>
                            </execution>
                            <execution>
                                <id>yarn build</id>
                                <goals>
                                    <goal>yarn</goal>
                                </goals>
                                <configuration>
                                    <arguments>build</arguments>
                                    <environmentVariables>
                                        <BUILD_PATH>${frontendBuildOutputPath}</BUILD_PATH>
                                    </environmentVariables>
                                </configuration>
                                <phase>generate-resources</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <nodeVersion>v16.15.1</nodeVersion>
                            <yarnVersion>v1.22.18</yarnVersion>
                            <npmVersion>8.11.0</npmVersion>
                            <workingDirectory>src/main/frontend</workingDirectory>
                            <installDirectory>target</installDirectory>
                            <nodeDownloadRoot>https://npmmirror.com/mirrors/node/</nodeDownloadRoot>
                            <yarnDownloadRoot>https://github.com/yarnpkg/yarn/releases/download/</yarnDownloadRoot>
                            <npmRegistryURL>https://registry.npmmirror.com</npmRegistryURL>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
